# cobosys-lite

./: CMakeLists.txt  README.md
client_libs/libplayerc/: CMakeLists.txt
client_libs/libplayerc++/: CMakeLists.txt
docs/: .~AM技术文档.docx  SLAM技术文档.docx
examples/: backpack_2d.lua  cartoslam.cfg  navigation.cfg
examples/maps/: test.pgm  test.yaml
extensions/: readme.txt
extensions/Cartoslam/: CMakeLists.txt
extensions/Cartoslam/src/: map_builder_bridge.cpp  map_builder_bridge.h  start.h  start_constants.h  start_options.cpp  start_options.h  time_conversion.cpp  time_conversion.h  trajectory_option.h  trajectory_options.cpp
extensions/Cobotslam/: CMakeLists.txt
extensions/Cobotslam/Cartoslam/: CMakeLists.txt
extensions/Cobotslam/Cartoslam/src/: Cartoslam.cpp  Cartoslam.h  sensor_bridge.cpp  sensor_bridge.h  start.cpp  utility.h
extensions/Cobotslam/cartographer/: CMakeLists.txt
extensions/Cobotslam/cartographer/cartographer/mapping/: imu_tracker.cc  imu_tracker.h
extensions/Cobotslam/cartographer/cartographer/sensor/: map_by_time.h
extensions/Cobotslam/cartographer/cartographer/sensor/internal/: collator.cc  voxel_filter.cc  voxel_filter.h
extensions/Cobotslam/cartographer/cartographer/transform/: rigid_transform.cc  rigid_transform.h  timestamped_transform.cc  timestamped_transform.h  transform.h  transform_interpolation_buffer.cc  transform_interpolation_buffer.h
extensions/Cobotslam/cartographer/cartographer/transform/proto/: transform.proto
extensions/Cobotslam/cartographer/cmake/: functions.cmake
scripts/: create_all_device_rules.py  robotbase.rules  rplidar.rules
server/: CMakeLists.txt  server.cc
server/drivers/: CMakeLists.txt
server/drivers/localization/: CMakeLists.txt
server/drivers/localization/amcl/: amcl_laser.cc
server/drivers/map/: CMakeLists.txt  mapfile.cc
server/drivers/planner/wavefront/: wavefront.cc
server/drivers/position/: CMakeLists.txt
sim-examples/: pioneer.inc  simple.cfg  simple.world
utils/: CMakeLists.txt
